Fix footer and title text overflow, add hide logic to fp feature image

--- a/sources/stylesheets/components/_site-footer.scss
+++ b/sources/stylesheets/components/_site-footer.scss
@@ -30,6 +30,7 @@
 
   .blog-article-nav {
     @extend %clearfix;
+    @include hyphenate(true);
     border-top: 1px solid transparent;
     border-bottom: 1px solid transparent;
     display: table;
