--- a/sources/stylesheets/general/_base.scss
+++ b/sources/stylesheets/general/_base.scss
@@ -311,6 +311,12 @@ a {
   @include query($tablet-2) {
     margin: 0 0 $margin-low;
     height: calc((100vw - 40px) / (375 / 245));
+
+    &.empty {
+      .public & {
+        display: none;
+      }
+    }
   }
 
 }
