--- a/sources/stylesheets/layouts/_blog-and-news.scss
+++ b/sources/stylesheets/layouts/_blog-and-news.scss
@@ -19,6 +19,7 @@
   .blog-article {
     position: relative;
     padding: $padding-medium 0;
+    @include hyphenate(true);
 
     .article-image {
       position: relative;
